--- a/poly-gateway-service/src/main/resources/application.properties
+++ b/poly-gateway-service/src/main/resources/application.properties
@@ -8,3 +8,7 @@ admin.user=admin
 admin.password=admin123
 
 eureka.client.service-url.defaultZone=http://devdb:8761/eureka/
+
+http.factory.requests.connection-request-timeout=1500
+http.factory.requests.connect-timeout=1500
+http.factory.requests.read-timeout=5000
