Added admin ssh login

--- a/poly-gateway-service/build.gradle
+++ b/poly-gateway-service/build.gradle
@@ -40,6 +40,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
 	compile('org.springframework.boot:spring-boot-starter-web')
+	compile('org.springframework.boot:spring-boot-starter-remote-shell')
+	compile("org.springframework.boot:spring-boot-starter-security")
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 }
 
