Added API for evaluating functions

--- a/poly-function/build.gradle
+++ b/poly-function/build.gradle
@@ -32,6 +32,7 @@ springBoot {
 }
 
 dependencies {
+	compile project(":poly-function-model")
     compile("com.unidev.platform:unidev-strings:$project.unidevPlatformVersion")
     compile("com.unidev.platform:unidev-j2ee:$project.unidevPlatformVersion")
     compile 'org.jminix:jminix:1.2.0'
