--- a/poly-function/build.gradle
+++ b/poly-function/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     compile("com.unidev.platform:unidev-j2ee:$project.unidevPlatformVersion")
 	compile 'commons-io:commons-io:2.5'
 	compile 'org.jminix:jminix:1.2.0'
+    compile 'io.springfox:springfox-swagger2:2.6.1'
+    compile 'io.springfox:springfox-swagger-ui:2.4.0'
 	compile 'org.codehaus.groovy:groovy-all'
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
