Application name updated

--- a/poly-function/src/main/resources/application.properties
+++ b/poly-function/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=poly-gateway-service-template
+spring.application.name=poly-function
 
 admin.user=admin
 admin.password=admin123
