--- a/poly-function/build.gradle
+++ b/poly-function/build.gradle
@@ -40,6 +40,7 @@ dependencies {
     compile 'io.springfox:springfox-swagger2:2.6.1'
     compile 'io.springfox:springfox-swagger-ui:2.6.1'
 	compile 'org.codehaus.groovy:groovy-all'
+    compile group: 'org.apache.ivy', name: 'ivy', version: '2.4.0'
 	compile('org.springframework.boot:spring-boot-starter-actuator')
 	compile('org.springframework.boot:spring-boot-actuator-docs')
 	compile('org.springframework.cloud:spring-cloud-starter-eureka')
