--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 project.ext.unidevPlatformVersion = "2.1.0-SNAPSHOT"
 
 subprojects {
-    group = 'com.unidev'
+    group = 'com.unidev.poly-function'
     version = '0.0.1-SNAPSHOT'
 
     apply plugin: 'maven'
