Added default scripts location

--- a/poly-function/src/main/resources/application.properties
+++ b/poly-function/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 spring.application.name=poly-function
 application.name=poly-function
 
+scripts.root=/tmp/scripts
+
 admin.user=admin
 admin.password=admin123
 
